[package]
name = "plainchant"
version = "0.4.2"
authors = ["Jack Byrne <jgbyrne9@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.7.5", features = ["multipart"] }
chrono = "0.4"
futures = "0.3"
bytes = "1.6"
rand = "0.8"
image = "0.25"
toml = "0.8"
lazy_static = "1.4"
regex = "1.10"
rusqlite = "0.31"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
mime_guess = "2.0"
dashmap = "5.5"
sha256 = "1.5.0"
