[package]
name = "plainchant"
version = "0.5.1"
authors = ["Jack Byrne <jgbyrne9@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.7.5", features = ["multipart"] }
chrono = "0.4"
bytes = "1"
rand = "0.8"
image = "0.25"
toml = "0.8"
lazy_static = "1"
regex = "1"
rusqlite = "0.31"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
mime_guess = "2"
dashmap = "6"
sha256 = "1"
url = "2"
